// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthError.svelte > should render error with name 1`] = `
<div>
  <error
    class="flex flex-col"
  >
    <span>
       
      AuthApi
      :
       
      An error
    </span>
  </error>
</div>
`;

exports[`AuthError.svelte > should render error with status & name 1`] = `
<div>
  <error
    class="flex flex-col"
  >
    <span>
      400
      :
       
      AuthApi
      :
       
      An error
    </span>
  </error>
</div>
`;

exports[`AuthError.svelte > should render error with status 1`] = `
<div>
  <error
    class="flex flex-col"
  >
    <span>
      400
      :
       
       
      An error
    </span>
  </error>
</div>
`;

exports[`AuthError.svelte > should render with changes 1`] = `
<div>
  <error
    class="flex flex-col"
  >
    <span>
       
       
      An error occurred
    </span>
  </error>
</div>
`;

exports[`AuthError.svelte > should render with changes 2`] = `
<div>
  <error
    class="flex flex-col"
  >
    <span>
       
      AuthApi
      :
       
      Something else
    </span>
  </error>
</div>
`;

exports[`AuthError.svelte > should render with changes 3`] = `
<div>
  <error
    class="flex flex-col"
  >
    <span>
      400
      :
       
      AuthApi
      :
       
      Another error
    </span>
  </error>
</div>
`;
